Added routes to add and get user vehicles
